--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="bg-info">
     <div class="container">
-        <h1 class="m-b-3 m-t-3 display-1 text-md-center">Full Stack Javascrip Conf</h1>
+        <h1 class="m-b-3 m-t-3 display-1 text-md-center">Trang Web Của Thảo Mít</h1>
         <div class="row">
             <div class="col-lg-6 offset-lg-3">
                 <div class="input-group">
