--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="icon" href="1472220418_ice-cream-cone-emoji-cartoon-015.png">
 </head>
 <body class="bg-info">
     <div class="container">
